--- a/Style/konsumsi.css
+++ b/Style/konsumsi.css
@@ -1931,6 +1931,26 @@ body {
     min-height: 100vh; 
 }
 
+.background-olahraga {
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+    margin-top: -30rem;
+}
+
+.last-title {
+    width: 70%;
+    justify-content: center;
+    font-family: 'Poppins-Medium';
+    font-size: 60px;
+    text-align: center;
+    margin: 11rem auto;
+    animation: fadeInUp linear;
+    transition: 0.3s ease-in-out;
+    animation-timeline: view();
+    animation-range: entry 0% cover 20%;
+}
+
 .footer {
     width: 100%;
     height: 20px;
