--- a/Style/style.css
+++ b/Style/style.css
@@ -537,10 +537,10 @@ body {
 }
 
 .background-olahraga {
-    max-width: 100vw;
+    width: 100%;
     position: absolute;
     z-index: -1;
-    margin-top: 6rem;
+    margin-top: 5rem;
     margin-left: -7rem;
 }
 
